--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "next": "^15.1.3",
