--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mock": "npx tsx watch ./src/mocks/http.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
@@ -17,16 +18,27 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@mswjs/http-middleware": "^0.10.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
+    "cors": "^2.8.5",
     "eslint": "^8",
     "eslint-config-next": "^14",
     "eslint-plugin-tailwindcss": "^3.17.5",
+    "express": "^4.21.2",
+    "msw": "^2.7.0",
     "postcss": "^8.4.49",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.16",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
