--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "next": "^15.1.3",
+    "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@mswjs/http-middleware": "^0.10.2",
